--- a/ index.html
+++ b/ index.html
@@ -16,5 +16,7 @@
     1976 at a Homebrew Computer Club meeting.<br>
     Here are some other notable Apple products:
     Apple II<br>
-    Released in 1977, the Apple II was the first mass-produced home computer system.</p>
+    Released in 1977, the Apple II was the first mass-produced home computer system.</p>  
+</body>
+
 </html>
